Page MenuHome GnuPG

gpg --refresh-keys w/o args does not work anymore
Closed, ResolvedPublic

Description

The build up KS_GET line will be too large for even a modest sized keyring. We
need to break it up into chunks and loop.

Details

Version
2.1.0

Event Timeline

werner renamed this task from gpg --refresh-keys w/0 args does not work anymore to gpg --refresh-keys w/o args does not work anymore.Nov 7 2014, 11:17 AM
werner added projects: gnupg, Bug Report.
werner set Version to 2.1.0.
werner added a subscriber: werner.
werner claimed this task.